welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:9: error: ':' expected but ')' found.
	def alpha(T):Color = {
                   ^Array1:16: error: identifier expected but '}' found.
}
^