welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {

	var T = new Array[Color](getMondeHauteur());
	for(w<- 0 to T.length-1) {
		T(w) = getCouleurSol();
		avance();
		}
	def alpha(T):Color = {
		var j = getMondeLargeur();
		for ( a<- 1 to j ) {
			return
		}
		
	}
}

